[package]
name = "dusk"
version = "0.1.0"
edition = "2024"
description = "DUSK - Disk Usage Survey Kit. An interactive TUI disk usage analyzer."
license = "MIT"

[[bin]]
name = "dusk"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
rayon = "1.10"
humansize = "2"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
